# ekklesia-notify

./: .gitignore  README.md  README.rst  default.nix  docker.nix  example-settings.yml  generate_settings_schema.py  pyenv  pyproject.toml  python_dev_env.nix  settings_schema.json  shell.nix
nix/: deps.nix  serve_app.nix  sources.json
scripts/: run_matrix_experiment.py
src/ekklesia_notify/: __init__.py  api_models.py  main.py  models.py  setting_models.py  settings.py  settings_models.py
src/ekklesia_notify/connectors/: connector.py  logging_dummy.py
src/ekklesia_notify/lib/: crypto.py  mail.py  matrix.py  templating.py
src/ekklesia_notify/transport/: __init__.py  logging_dummy.py  mail.py  matrix.py
tests/: test_app.py
