[tool.poetry]
name = "ekklesia-notify"
version = "2020.07.0"
description = "Notification service for Ekklesia apps"
authors = ["Tobias dpausp <dpausp@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.1"
uvicorn = "^0.11.6"
matrix-nio = {extras = ["e2e"], version = "^0.14.1"}
markdown = "^3.2.2"
eliot-tree = "^19.0.1"
pyyaml = "^5.3.1"
endesive = "^1.5.10"
pdbpp = "^0.10.2"
eliot = "^1.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
