[tool.poetry]
name = "ekklesia-notify"
version = "2020.07.0"
description = "Notification service for Ekklesia apps"
keywords = ["ekklesia", "matrix", "mail", "notification"]
license = "AGPL-3.0-or-later"
authors = ["Tobias dpausp <dpausp@posteo.de>"]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9"
]


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
matrix-nio = {version = "^0.19.0", extras = ["e2e"]}
markdown = "^3.2.2"
eliot-tree = "^19.0.1"
pyyaml = "^5.3.1"
endesive = "^2.0.9"
pdbpp = "^0.10.2"
eliot = "^1.12.0"
aiosmtplib = "^1.1.3"
python-ulid = "^1.0.0"
devtools = "^0.8.0"
Jinja2 = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pydantic = {version = "^1.8.2", extras = ["email"]}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
